added ReadCSV and configs

--- a/app/config/paths.ini
+++ b/app/config/paths.ini
@@ -4,5 +4,5 @@ data                = app/data
 serialization       = app/bin
 
 [extensions]
-extension_data              = .arff
+extension_data              = .csv
 extension_serialization     = .bin
