added SplitbyPeriod instance

--- a/app/config/data.ini
+++ b/app/config/data.ini
@@ -1,2 +1,9 @@
 [csv_config]
 delimiter = ,
+
+[features]
+timestamp       = timestamp
+oil_temperature = Oil_temperature
+
+[datetime_format]
+timestamp_format = %%Y-%%m-%%d %%H:%%M:%%S
